force-app/main/default/objects/Sports_Program__c/Sports_Program__c.object-meta.xml
<CustomObject>
    <description>Structured inclusive sports program inventory used for deterministic matching.</description>
    <label>Sports Program</label>
    <nameField><label>Program Name</label><type>Text</type></nameField>
    <pluralLabel>Sports Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>