force-app/main/default/objects/Sports_Program__c/fields/Accessibility_Features__c.field-meta.xml
<CustomField><fullName>Accessibility_Features__c</fullName><label>Accessibility Features</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>