force-app/main/default/objects/Sports_Program__c/fields/Accessibility_Verified__c.field-meta.xml
<CustomField><fullName>Accessibility_Verified__c</fullName><defaultValue>false</defaultValue><label>Accessibility Verified</label><type>Checkbox</type></CustomField>