force-app/main/default/objects/Sports_Program__c/fields/Adaptive_Equipment_Available__c.field-meta.xml
<CustomField><fullName>Adaptive_Equipment_Available__c</fullName><defaultValue>false</defaultValue><label>Adaptive Equipment Available</label><type>Checkbox</type></CustomField>