force-app/main/default/objects/Sports_Program__c/fields/Capacity_Status__c.field-meta.xml
<CustomField><fullName>Capacity_Status__c</fullName><label>Capacity Status</label><length>80</length><type>Text</type></CustomField>