force-app/main/default/objects/Sports_Program__c/fields/City__c.field-meta.xml
<CustomField><fullName>City__c</fullName><label>City</label><length>80</length><type>Text</type></CustomField>