force-app/main/default/objects/Sports_Program__c/fields/Cost_Description__c.field-meta.xml
<CustomField><fullName>Cost_Description__c</fullName><label>Cost Description</label><length>255</length><type>Text</type></CustomField>