force-app/main/default/objects/Sports_Program__c/fields/Experience_Level__c.field-meta.xml
<CustomField><fullName>Experience_Level__c</fullName><label>Experience Level</label><length>40</length><type>Text</type></CustomField>