force-app/main/default/objects/Sports_Program__c/fields/Is_Demo__c.field-meta.xml
<CustomField>
    <fullName>Is_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fictional hackathon record. Must never be presented as a real provider or verified service.</description>
    <label>Synthetic Demo Data</label>
    <type>Checkbox</type>
</CustomField>