force-app/main/default/objects/Sports_Program__c/fields/Minimum_Age__c.field-meta.xml
<CustomField><fullName>Minimum_Age__c</fullName><label>Minimum Age</label><precision>3</precision><scale>0</scale><type>Number</type></CustomField>