force-app/main/default/objects/Sports_Program__c/fields/Organization__c.field-meta.xml
<CustomField><fullName>Organization__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Organization</label><referenceTo>Sports_Organization__c</referenceTo><relationshipLabel>Sports Programs</relationshipLabel><relationshipName>Sports_Programs</relationshipName><required>true</required><type>Lookup</type></CustomField>