force-app/main/default/objects/Sports_Program__c/fields/Postal_Code__c.field-meta.xml
<CustomField><fullName>Postal_Code__c</fullName><label>Postal Code</label><length>12</length><type>Text</type></CustomField>