force-app/main/default/objects/Sports_Program__c/fields/Program_Code__c.field-meta.xml
<CustomField><fullName>Program_Code__c</fullName><externalId>true</externalId><label>Program Code</label><length>30</length><required>true</required><type>Text</type><unique>true</unique></CustomField>