force-app/main/default/objects/Sports_Program__c/fields/Scholarship_Available__c.field-meta.xml
<CustomField><fullName>Scholarship_Available__c</fullName><defaultValue>false</defaultValue><label>Scholarship Available</label><type>Checkbox</type></CustomField>