force-app/main/default/objects/Sports_Program__c/fields/Source_URL__c.field-meta.xml
<CustomField><fullName>Source_URL__c</fullName><label>Source URL</label><type>Url</type></CustomField>