force-app/main/default/objects/Sports_Program__c/fields/Sport__c.field-meta.xml
<CustomField><fullName>Sport__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Sport</label><referenceTo>Sport__c</referenceTo><relationshipLabel>Sports Programs</relationshipLabel><relationshipName>Sports_Programs</relationshipName><required>true</required><type>Lookup</type></CustomField>