force-app/main/default/objects/Sports_Program__c/fields/Supports_Cognitive__c.field-meta.xml
<CustomField><fullName>Supports_Cognitive__c</fullName><defaultValue>false</defaultValue><label>Supports Cognitive Access</label><type>Checkbox</type></CustomField>