force-app/main/default/objects/Sports_Program__c/fields/Supports_Hearing__c.field-meta.xml
<CustomField><fullName>Supports_Hearing__c</fullName><defaultValue>false</defaultValue><label>Supports Hearing Access</label><type>Checkbox</type></CustomField>