force-app/main/default/objects/Sports_Program__c/fields/Supports_Mobility__c.field-meta.xml
<CustomField><fullName>Supports_Mobility__c</fullName><defaultValue>false</defaultValue><label>Supports Mobility Access</label><type>Checkbox</type></CustomField>