force-app/main/default/objects/Sports_Program__c/fields/Supports_Visual__c.field-meta.xml
<CustomField><fullName>Supports_Visual__c</fullName><defaultValue>false</defaultValue><label>Supports Visual Access</label><type>Checkbox</type></CustomField>