force-app/main/default/objects/Sports_Program__c/fields/Verification_Date__c.field-meta.xml
<CustomField><fullName>Verification_Date__c</fullName><label>Verification Date</label><type>Date</type></CustomField>